Added deleteInventory function, updated swagger docs created Order collection functions
