# routes/user.js
@@ -1,6 +1,7 @@
 const router = require('express').Router();
 const userController = require('../controllers/user');
 const { isAuthenticated } = require('../middleware/authenticate');
+const { isAdmin } = require('../middleware/authenticate');
 
 
 router.get('/', userController.getAll);
@@ -12,6 +13,6 @@ router.post('/', isAuthenticated, userController.createUser);
 router.put('/password/:id', isAuthenticated, userController.changePassword);
 router.put('/admin/:id', isAuthenticated, userController.setAdmin);
 router.put('/user/:id', isAuthenticated, userController.setUser);
-router.delete('/:id', isAuthenticated, userController.deleteUser);
+router.delete('/:id', isAuthenticated, isAdmin, userController.deleteUser);
 
 module.exports = router;
